update home page url

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-reads",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vikmn.github.io/myreads/",
+  "homepage": "https://vikmn.github.io/udacitynd-react-myreads/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "prop-types": "^15.6.2",
