--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router": "5.1.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.2.0"
   },
